--- a/templates/task.html
+++ b/templates/task.html
@@ -37,8 +37,8 @@
         </td>
         <td>
           <a href="{{task.pk}}/" class ="btn btn-success">Mark</a>
-          <a href="{{task.pk}}/" class ="btn btn-primary">Update</a>
-          <a href="{{task.pk}}/" class ="btn btn-secondary">Delete</a>
+          <a href="{{task.pk}}/edit/" class ="btn btn-primary">Update</a>
+          <a href="{{task.pk}}/delete/" class ="btn btn-primary">Delete</a>
         </td>
       </tr>
         {% endfor %}
